yosql-m-p compiles